# advent2025

./: LICENSE  README.md  advent2025.cabal
aoc01/: Main.hs
aoc02/: Main.hs
aoc03/: Main.hs
aoc04/: Main.hs
aoc05/: Main.hs
aoc06/: Main.hs
aoc07/: Main.hs
aoc08/: Main.hs
aoc09/: Main.hs
aoc10/: ILP.hs  Main.hs
aoc11/: Main.hs
aoc12/: Main.hs
